--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div class="navbar-wrapper">
 
         <button class="navbar-menu-btn" data-navbar-toggle-btn>
-          <ion-icon name="menu-outline"></ion-icon>
+          <ion-icon class="menu-btn" name="menu-outline"></ion-icon>
         </button>
 
         <nav class="navbar" data-navbar>
