fix navabar and footer

--- a/index.html
+++ b/index.html
@@ -376,9 +376,9 @@
 
         <div class="footer-brand">
 
-          <a href="#" class="logo">
+          <!-- <a href="#" class="logo">
             <img src="./assets/images/logo.png" alt="Funel logo">
-          </a>
+          </a> -->
 
           <p class="footer-text">Follow us on</p>
 
