fixed input labels for mailing

--- a/index.html
+++ b/index.html
@@ -259,9 +259,7 @@
                 <h3 class="h2 item-title">We offer low fees that are transparent</h3>
 
                 <p class="item-text">
-                  Each time a digital asset is purchased or sold, Sequoir donates a percentage of the fees back into the
-                  development of
-                  the asset through its charitable foundation.
+                  We pride ourselves on offering low, transparent fees with no hidden charges. You'll always know exactly what you're paying for, allowing you to plan your finances confidently.
                 </p>
               </div>
 
