updated text in features

--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                 <h3 class="h2 item-title">We offer low fees that are transparent</h3>
 
                 <p class="item-text">
-                  We pride ourselves on offering low, transparent fees with no hidden charges. You'll always know exactly what you're paying for, allowing you to plan your finances confidently.
+                  Let's be real - most agencies will nickel and dime you until you're broke. Not us. We actually want you to keep some profits, so our fees are stupid low and stupid transparent. You're welcome
                 </p>
               </div>
 
