--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </li>
 
             <li class="nav-item">
-              <a href="#about" class="nav-link">What we do</a>
+              <a href="#about" class="nav-link">Our services</a>
             </li>
 
             <li class="nav-item">
@@ -143,13 +143,70 @@
                 <div class="about-card">
 
                   <div class="card-icon">
+                    <ion-icon name="globe-outline"></ion-icon>
+                  </div>
+
+                  <h3 class="h3 card-title">Social Media Marketing</h3>
+
+                  <p class="card-text">
+                    <ul>
+                     <li>Channel strategy Audience research campaign planning</li>
+                    <li>Creative content development</li>
+                    <li>Paid advertising management</li>
+                    <li>Influencer marketing collaborations</li>
+                    <li>Community engagement and response strategy</li>
+                    <li>Performance tracking and analytics reporting</li>
+                    </ul> 
+                  </p>
+
+                </div>
+              </li>
+
+              <li>
+                <div class="about-card">
+
+                  <div class="card-icon">
+                    <ion-icon name="calendar-outline"></ion-icon>
+                  </div>
+
+                  <h3 class="h3 card-title">Content Creation
+                  </h3>
+                  <p class="card-text">
+                    <ul>
+                      <li>Content strategy and editorial planning</li>
+                     <li>Blogs/Article writing and copywriting</li>
+                     <li>Video scripting, production, and editing</li>
+                     <li>Infographics and visual content design</li>
+                     <li>short and long-form content</li>
+                     <li>Podcast scripting and audio production</li>
+                     <li>Content optimization for search (SEO)</li>
+                    </ul>
+                  </p>
+                </div>
+              </li>
+
+              <li>
+                <div class="about-card">
+
+                  <div class="card-icon">
                     <ion-icon name="briefcase-outline"></ion-icon>
                   </div>
 
-                  <h3 class="h3 card-title">Paid Traffic</h3>
+                  <h3 class="h3 card-title">Social Media Management and Moderation</h3>
 
                   <p class="card-text">
-                    Our experts craft compelling campaigns and strategies that drive qualified leads and conversions, propelling your business forward in the digital landscape
+                    <ul>
+                      <li>Social listening and monitoring</li>
+                     <li>Audience interactions and community building
+                    </li>
+                     <li>Content curation and scheduling</li>
+                     <li>Issue/crisis response and mitigation
+                    </li>
+                     <li>Social advertising monitoring and optimization
+                    </li>
+                     <li>Podcast scripting and audio production</li>
+                     <li>Reporting on engagement, sentiment, reach </li>
+                    </ul>
                   </p>
 
                 </div>
@@ -159,34 +216,24 @@
                 <div class="about-card">
 
                   <div class="card-icon">
-                    <ion-icon name="chatbubbles-outline"></ion-icon>
+                    <ion-icon name="brush-outline"></ion-icon>
                   </div>
 
-                  <h3 class="h3 card-title">Content Marketing</h3>
-
+                  <h3 class="h3 card-title">Digital Creation
+                  </h3>
                   <p class="card-text">
-                    Our content strategists collaborate with you to develop a content plan that resonates with your target market though viral social media content.  our content marketing alchemists have the formulas to transform your messages into pure digital gold
+                    <ul>
+                      <li>NFT Artwork and Digital Collectible</li>
+                     <li>Animation, and Motion Graphics</li>
+                     <li>Interactive Website Design and Development</li>
+                     <li>Logo Design and Branding</li>
+                     <li>Crypto Projects Assets (Coin Animations, Digital Artworks, etc)</li>
+                     <li>Illustrations and Digital Art Commissions</li>
+                     <li>Content optimization for search (SEO)</li>
+                    </ul>
                   </p>
-
                 </div>
               </li>
-
-              <li>
-                <div class="about-card">
-
-                  <div class="card-icon">
-                    <ion-icon name="rocket-outline"></ion-icon>
-                  </div>
-
-                  <h3 class="h3 card-title">Digital Creation</h3>
-
-                  <p class="card-text">
-                    Stand out with bold, captivating digital assets crafted by our talented artists, animators, and designers.
-                  </p>
-
-                </div>
-              </li>
-
             </ul>
 
           </div>
@@ -535,3 +582,8 @@
 </body>
 
 </html>
+
+
+
+
+
