--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     - custom css link
   -->
   <link rel="stylesheet" href="./assets/css/style.css">
+  <!-- <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp,container-queries"></script> -->
 
   <!-- 
     - google font link
@@ -60,18 +61,13 @@
             <li class="nav-item">
               <a href="#features" class="nav-link">Why us?</a>
             </li>
-
-            <li class="nav-item">
-              <a href="#" class="nav-link">Our work</a>
-            </li>
-
             <li class="nav-item">
               <a href="#contact" class="nav-link">Contact</a>
             </li>
 
           </ul>
 
-          <button class="btn btn-primary">Get in touch</button>
+          <button class="btn btn-primary"><a href="mailto:streamlineagency.io@gmail.com">Get in touch</a></button>
 
         </nav>
 
@@ -101,13 +97,15 @@
             <h1 class="h1 hero-title">Amplify your Online Presence</h1>
 
             <p class="hero-text">
-              We offer a complete solution combining expert social media marketing and captivating content creation to drive powerful online, visibilty, audience engagement, and accelerated business growth - ensuring you stand out from your competitors 
+              We offer a complete solution combining expert social media marketing and captivating content creation to
+              drive powerful online, visibilty, audience engagement, and accelerated business growth - ensuring you
+              stand out from your competitors
             </p>
             <p class="hero-text">
               Say goodbye to wasted resources and ineffective campaigns - it's time to make every dollar count
             </p>
 
-            <button class="btn btn-primary">Speak to our Team Today</button>
+            <button class="btn btn-primary"> <a href="mailto:streamlineagency.io@gmail.com">Speak to our Team Today</a></button>
 
           </div>
 
@@ -115,7 +113,7 @@
 
         </div>
 
-        
+
       </section>
 
 
@@ -134,10 +132,97 @@
             <h2 class="h2 section-title">What We Do</h2>
 
             <p class="section-text">
-              While you hesitate, your competitors accelerate, seizing every moment to outpace and outmaneuver you in this relentless digital battlefield. Our aim, for you to stand out from the crowd.
+              While you hesitate, your competitors accelerate, seizing every moment to outpace and outmaneuver you in
+              this relentless digital battlefield. Our aim, for you to stand out from the crowd.
             </p>
 
-            <ul class="about-list">
+            <div class="grid">
+              <div class="box z-index25">
+                <div class="title-box research">
+                  <h2>Social Media Marketing</h2>
+                  <div class="card-icon">
+                    <ion-icon name="globe-outline"></ion-icon>
+                  </div>
+                </div>
+                <div class="content-box research">
+                  <ul>
+                    <li>Community engagement </li>
+                    <li>Influencer marketing</li>
+                    <li>Campaign planning</li>
+                    <li>Audience research </li>
+                    <li>Channel strategy </li>
+                    <li>Analytics report</li>
+                    <li>Creative content </li>
+                    <li>Paid advertising</li>
+
+                  </ul>
+                </div>
+              </div>
+              <div class="box z-index20">
+                <div class="title-box create">
+                  <h2>Content Creation</h2>
+                  <div class="card-icon">
+                    <ion-icon name="calendar-outline"></ion-icon>
+                  </div>
+                </div>
+                <div class="content-box create">
+                  <ul>
+                    <li>Content optimization</li>
+                    <li>short form content</li>
+                    <li>Long form content</li>
+                    <li>Content strategy</li>
+                    <li>Video production</li>
+                    <li>Copywriting</li>
+                    <li>Infographics </li>
+                  </ul>
+                </div>
+
+              </div>
+              <div class="box z-index15">
+                <div class="title-box distribute">
+                  <h2>Social Media Moderation</h2>
+                  <div class="card-icon">
+                    <ion-icon class="invert" name="briefcase-outline"></ion-icon>
+                  </div>
+                </div>
+                <div class="content-box distribute">
+                  <ul>
+
+                    <li>Reporting on engagement</li>
+                    <li>Audience interactions
+                    </li>
+                    <li>Social engagements</li>
+                    <li>Community building</li>
+                    <li>Content scheduling</li>
+                    <li>Crisis mitigation</li>
+                  </ul>
+                </div>
+
+              </div>
+              <div class="box z-index10">
+                <div class="title-box optimize">
+                  <h2>DIGITAL CREATION</h2>
+                  <div class="card-icon">
+                    <ion-icon name="brush-outline"></ion-icon>
+                  </div>
+                </div>
+                <div class="content-box optimize">
+                  <ul>
+
+                    <li>Illustrations and Digital Art</li>
+                    <li>Logo Design and Branding</li>
+
+                    <li>Web Development</li>
+                    <li>Motion Graphics</li>
+                    <li>Digital Designs </li>
+                    <li>NFT Artwork</li>
+                    <li>Animation</li>
+                  </ul>
+                </div>
+
+              </div>
+            </div>
+            <!-- <ul class="about-list">
 
               <li>
                 <div class="about-card">
@@ -234,7 +319,7 @@
                   </p>
                 </div>
               </li>
-            </ul>
+            </ul> -->
 
           </div>
 
@@ -249,10 +334,11 @@
               <h2 class="h2 section-title">We’re obsessed with growth</h2>
 
               <p class="section-text">
-                With our diverse global team and proven strategies  crafted to accelerate your business, exponential growth is literally guaranteed. Yes, we want your success.
+                With our diverse global team and proven strategies crafted to accelerate your business, exponential
+                growth is literally guaranteed. Yes, we want your success.
               </p>
 
-              <button class="btn btn-secondary">Sign Up For Free</button>
+              <button class="btn btn-secondary"> <ahref="mailto:streamlineagency.io@gmail.com">Speak to our team today</a></button>
 
             </div>
 
@@ -275,7 +361,9 @@
           <h2 class="h2 section-title">Our team is made up of all different backgrounds from all over the world.</h2>
 
           <p class="section-text">
-            Our globally diverse team, comprised of professionals from various backgrounds and cultures around the world, brings a wealth of unique perspectives that fuel innovative  strategies to captivate your target audience.
+            Our globally diverse team, comprised of professionals from various backgrounds and cultures around the
+            world, brings a wealth of unique perspectives that fuel innovative strategies to captivate your target
+            audience.
           </p>
 
           <ul class="features-list">
@@ -290,7 +378,8 @@
                 <h3 class="h2 item-title">Cover your everyday expenses</h3>
 
                 <p class="item-text">
-                  Stop wasting time and money on faulty and ineffective content and ad campaigns. It's time to make your budget count
+                  Stop wasting time and money on faulty and ineffective content and ad campaigns. It's time to make your
+                  budget count
                 </p>
               </div>
 
@@ -306,7 +395,8 @@
                 <h3 class="h2 item-title">We offer low fees that are transparent</h3>
 
                 <p class="item-text">
-                  Let's be real - most agencies will nickel and dime you until you're broke. Not us. We actually want you to keep some profits, so our fees are stupid low and stupid transparent. You're welcome
+                  Let's be real - most agencies will nickel and dime you until you're broke. Not us. We actually want
+                  you to keep some profits, so our fees are stupid low and stupid transparent. You're welcome
                 </p>
               </div>
 
@@ -368,30 +458,30 @@
             </figure>
           </div>
 
-          <form action="" class="contact-form">
+          <form action="https://docs.google.com/forms/d/e/1FAIpQLSeGgHCQFpFv1x1otfF2RCWBwFIOSCusv9vCpYi3afXMELJ2CA/formResponse" class="contact-form">
 
             <div class="input-wrapper">
-              <label for="name" class="input-label">Name *</label>
+              <label for="entry.936917814" class="input-label">Name *</label>
 
-              <input type="text" name="name" id="name" required placeholder="Type Name" class="input-field">
+              <input type="text" name="entry.936917814" id="name" required placeholder="Type Name" class="input-field">
             </div>
 
             <div class="input-wrapper">
-              <label for="phone" class="input-label">Phone</label>
+              <label for="entry.1530559748" class="input-label">Phone</label>
 
-              <input type="tel" name="phone" id="phone" placeholder="Type Phone Number" class="input-field">
+              <input type="tel" name="entry.1530559748" id="phone" placeholder="Type Phone Number" class="input-field">
             </div>
 
             <div class="input-wrapper">
-              <label for="email" class="input-label">Email Address *</label>
+              <label for="entry.1751806736" class="input-label">Email Address *</label>
 
-              <input type="email" name="email" id="email" required placeholder="Type Email Address" class="input-field">
+              <input type="email" name="entry.1751806736" id="email" required placeholder="Type Email Address" class="input-field">
             </div>
 
             <div class="input-wrapper">
-              <label for="message" class="input-label">How can we help? *</label>
+              <label for="entry.1773240912" class="input-label">How can we help? *</label>
 
-              <textarea name="message" id="message" placeholder="Type Description" required
+              <textarea name="entry.1773240912" id="message" placeholder="Type Description" required
                 class="input-field"></textarea>
             </div>
 
@@ -421,9 +511,9 @@
 
         <div class="footer-brand">
 
-          <!-- <a href="#" class="logo">
+          <a href="#" class="logo">
             <img src="./assets/images/logo.png" alt="Funel logo">
-          </a> -->
+          </a>
 
           <p class="footer-text">Follow us on</p>
 
@@ -542,13 +632,13 @@
         </div>
 
       </div>-->
-    </div>
+      </div>
 
-    <div class="footer-bottom">
-      <p class="copyright">
-        &copy; 2024 <a href="#">Streamline</a> All right reserved
-      </p>
-    </div>
+      <div class="footer-bottom">
+        <p class="copyright">
+          &copy; 2024 <a href="#">Streamline</a> All right reserved
+        </p>
+      </div>
 
   </footer>
 
@@ -582,8 +672,3 @@
 </body>
 
 </html>
-
-
-
-
-
