--- a/index.html
+++ b/index.html
@@ -105,7 +105,8 @@
               Say goodbye to wasted resources and ineffective campaigns - it's time to make every dollar count
             </p>
 
-            <button class="btn btn-primary"> <a href="mailto:streamlineagency.io@gmail.com">Speak to our Team Today</a></button>
+            <button class="btn btn-primary"> <a href="mailto:streamlineagency.io@gmail.com">Speak to our Team
+                Today</a></button>
 
           </div>
 
@@ -338,7 +339,9 @@
                 growth is literally guaranteed. Yes, we want your success.
               </p>
 
-              <button class="btn btn-secondary"> <ahref="mailto:streamlineagency.io@gmail.com">Speak to our team today</a></button>
+              <button class="btn btn-secondary">
+                <ahref="mailto:streamlineagency.io@gmail.com">Speak to our team today</a>
+              </button>
 
             </div>
 
@@ -458,7 +461,9 @@
             </figure>
           </div>
 
-          <form action="https://docs.google.com/forms/d/e/1FAIpQLSeGgHCQFpFv1x1otfF2RCWBwFIOSCusv9vCpYi3afXMELJ2CA/formResponse" class="contact-form">
+          <form
+            action="https://docs.google.com/forms/d/e/1FAIpQLSeGgHCQFpFv1x1otfF2RCWBwFIOSCusv9vCpYi3afXMELJ2CA/formResponse"
+            class="contact-form">
 
             <div class="input-wrapper">
               <label for="entry.936917814" class="input-label">Name *</label>
@@ -475,7 +480,8 @@
             <div class="input-wrapper">
               <label for="entry.1751806736" class="input-label">Email Address *</label>
 
-              <input type="email" name="entry.1751806736" id="email" required placeholder="Type Email Address" class="input-field">
+              <input type="email" name="entry.1751806736" id="email" required placeholder="Type Email Address"
+                class="input-field">
             </div>
 
             <div class="input-wrapper">
