updated logo and some text
added the srcset values to img tag to improve the responsive view on mobile devices. Change content creation to content marketing text.

--- a/index.html
+++ b/index.html
@@ -40,7 +40,11 @@
     <div class="container">
 
       <a href="#" class="logo">
-        <img src="./assets/images/logo.png" alt="Funel logo">
+        <img 
+          src="./assets/images/logo-small.png" 
+          srcset="./assets/images/logo.png 2030w"
+          sizes="(max-width: 512px) 300vw"
+          alt="Streamline Agency Logo">
       </a>
 
       <div class="navbar-wrapper">
@@ -164,7 +168,7 @@
               </div>
               <div class="box z-index20">
                 <div class="title-box create">
-                  <h2>Content Creation</h2>
+                  <h2>Content Marketing</h2>
                   <div class="card-icon">
                     <ion-icon name="calendar-outline"></ion-icon>
                   </div>
