fix footer logo

--- a/index.html
+++ b/index.html
@@ -525,7 +525,11 @@
         <div class="footer-brand">
 
           <a href="#" class="logo">
-            <img src="./assets/images/logo.png" alt="Funel logo">
+            <img 
+              src="./assets/images/logo-small.png" 
+              srcset="./assets/images/logo.png 2030w"
+              sizes="(max-width: 512px) 300vw"
+              alt="Streamline Agency Logo">
           </a>
 
           <p class="footer-text">Follow us on</p>
