--- a/index.html
+++ b/index.html
@@ -339,15 +339,14 @@
 
             <div class="about-bottom-content">
 
-              <h2 class="h2 section-title">We’re obsessed with growth</h2>
+              <h2 class="h2 section-title">See Our Creative Universe</h2>
 
               <p class="section-text">
-                With our diverse global team and proven strategies crafted to accelerate your business, exponential
-                growth is literally guaranteed. Yes, we want your success.
+                From NFTs and animations to UI/UX design and technical whitepapers, dive into our web3 creations
               </p>
 
               <button class="btn btn-secondary">
-                <a href="mailto:streamlineagency.io@gmail.com">Speak to our team today</a>
+                <a href="https://drive.google.com/drive/folders/1TzwuX02ap5h05uXl_GQtG09AURdwf6GP">Explore Portfolio</a>
               </button>
 
             </div>
@@ -549,8 +548,8 @@
             </li>
 
             <li>
-              <a href="#" class="social-link">
-                <ion-icon name="logo-youtube"></ion-icon>
+              <a href="https://x.com/Brahimx__" class="social-link">
+                <ion-icon name="logo-twitter"></ion-icon>
               </a>
             </li>
 
